--- a/src/App.css
+++ b/src/App.css
@@ -204,9 +204,19 @@ body {
 }
 
 .input-field.error {
-  border-color:var(--warning-color);
+  border-color: var(--warning-color);
 }
 
+.choices-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.choice {
+  width: calc(33.3333% - 10px);
+  margin-bottom: 10px;
+}
 
 .next-button {
   background-color: var(--primary-color);
@@ -224,4 +234,9 @@ body {
 
 .next-button:hover {
   background-color: var(--button-hover-color);
+}
+
+
+.next-button.error {
+  background-color: var(--warning-color);
 }
