Update Step1/2/3/4/5/6/7 Generator

--- a/src/App.css
+++ b/src/App.css
@@ -291,7 +291,13 @@ body {
   background-color: var(--primary-color);
 }
 
+.summary-text {
+  color: var(--text-color);
+}
 
+.summary-variable {
+  color: var(--primary-color);
+}
 
 .next-button {
   background-color: var(--primary-color);
