Fix UI Generator

--- a/src/App.css
+++ b/src/App.css
@@ -96,8 +96,8 @@ body {
 .main-title {
   color: var(--primary-color);
   text-align: center;
-  font-size: 2rem; /* Ajustez la taille du texte en fonction de vos préférences */
-  margin-bottom: 3rem; /* Ajoutez une marge en dessous du titre pour l'espacement */
+  font-size: 2rem; /* Ajuster la taille du texte en fonction des préférences */
+  margin-bottom: 3rem; /* Marge en dessous du titre pour l'espacement */
 }
 
 .language-selector-dialog .bp4-dialog-body {
