--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   --button-hover-color: #40a0fa;
   --text-color: #ABB3BF;
   --input-field-bg: #2B2A2A;
+  --radio-button-bg: var(--input-field-bg);
   --link-color: #0a95f7;
   --warning-color: #f70a0a;
 }
@@ -21,6 +22,7 @@ body {
 }
 
 .header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -83,6 +85,19 @@ body {
 
 .dashboard-button:hover {
   background-color: var(--button-hover-color);
+}
+
+.main-title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-title {
+  color: var(--primary-color);
+  text-align: center;
+  font-size: 2rem; /* Ajuster la taille du texte en fonction des préférences */
+  margin-bottom: 3rem; /* Marge en dessous du titre pour l'espacement */
 }
 
 .language-selector-dialog .bp4-dialog-body {
@@ -189,8 +204,19 @@ body {
   border-radius: 10px;
   padding: 20px;
   width: 100%;
-  max-width: 500px;
+  max-width: 600px;
+  min-height: 100px;
+  max-height: calc(100% - 90px);
+  overflow-y: auto;
 }
+
+.dialog-box-title {
+  text-align: center;
+  color: var(--title-color);
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
 
 .input-field {
   width: 100%;
@@ -204,9 +230,87 @@ body {
 }
 
 .input-field.error {
-  border-color:var(--warning-color);
+  border-color: var(--warning-color);
 }
 
+.choices-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.choice {
+  width: calc(33.3333% - 10px);
+  margin-bottom: 10px;
+}
+
+/* Masquer l'input radio d'origine */
+.choice input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* Style pour les boutons radio non sélectionnés */
+.choice input[type="radio"] + label {
+  display: inline-block;
+  padding: 5px 10px;
+  padding-left: 30px; /* Ajouter un espace à gauche pour le rond */
+  border: 2px solid var(--text-color);
+  border-radius: 4px;
+  background-color: var(--radio-button-bg);
+  color: var(--text-color);
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s;
+}
+
+/* Créer un rond personnalisé avec le pseudo-élément ::before */
+.choice input[type="radio"] + label::before {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 2px solid var(--text-color);
+  background-color: var(--input-field-bg);
+}
+
+/* Style pour les boutons radio sélectionnés */
+.choice input[type="radio"]:checked + label {
+  border-color: var(--primary-color);
+  color: var(--primary-color);
+}
+
+/* Modifier la couleur de la bordure du rond personnalisé lorsqu'il est sélectionné */
+.choice input[type="radio"]:checked + label::before {
+  border-color: var(--primary-color);
+}
+
+/* Ajouter un cercle rempli à l'intérieur du rond personnalisé lorsqu'il est sélectionné */
+.choice input[type="radio"]:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 9px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+}
+
+.summary-text {
+  color: var(--text-color);
+}
+
+.summary-variable {
+  color: var(--primary-color);
+}
 
 .next-button {
   background-color: var(--primary-color);
@@ -224,4 +328,9 @@ body {
 
 .next-button:hover {
   background-color: var(--button-hover-color);
+}
+
+
+.next-button.error {
+  background-color: var(--warning-color);
 }
